// Copyright 2022 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.analysis.bq;

import "google/protobuf/timestamp.proto";
import "go.chromium.org/luci/analysis/proto/analyzedtestvariant/analyzed_test_variant.proto";
import "go.chromium.org/luci/analysis/proto/v1/common.proto";

option go_package = "go.chromium.org/luci/analysis/proto/bq;bqpb";

// Verdict represent results of a test variant within an invocation.
message Verdict {
  // Id of the invocation that contains the verdict.
  string invocation = 1;

  // Status of the verdict.
  // String representation of luci.analysis.v1.VerdictStatus.
  string status = 2;

  // Invocation creation time.
  google.protobuf.Timestamp create_time = 3;
  // TODO: Add information about clusters and bugs.
}

// TestVariantRow represents a row in a BigQuery table for a LUCI Analysis
// analyzed test variant.
message TestVariantRow {
  // Can be used to refer to this test variant.
  // Format:
  // "realms/{REALM}/tests/{URL_ESCAPED_TEST_ID}/variants/{VARIANT_HASH}"
  string name = 1;

  // Realm that the test variant exists under.
  // See https://source.chromium.org/chromium/infra/infra/+/main:go/src/go.chromium.org/luci/common/proto/realms/realms_config.proto
  string realm = 2;

  // Test id, identifier of the test. Unique in a LUCI realm.
  string test_id = 3;

  // Hash of the variant.
  string variant_hash = 4;

  // Description of one specific way of running the test,
  // e.g. a specific bucket, builder and a test suite.
  repeated luci.analysis.v1.StringPair variant = 5;

  // Information about the test at the time of its execution.
  luci.analysis.v1.TestMetadata test_metadata = 6;

  // Metadata for the test variant.
  // See luci.resultdb.v1.Tags for details.
  repeated luci.analysis.v1.StringPair tags = 7;

  // A range of time. Flake statistics are calculated using test results
  // in the verdicts that were finalized within that range.
  luci.analysis.v1.TimeRange time_range = 8;

  // Status of the test variant.
  // String representation of luci.analysis.analyzedtestvariant.Status.
  string status = 9;

  // Flakiness statistics of the test variant.
  luci.analysis.analyzedtestvariant.FlakeStatistics flake_statistics = 10;

  // Verdicts of the test variant during the time range.
  repeated Verdict verdicts = 11;

  // Partition_time is used to partition the table.
  // It's the same as the latest of time_range.
  google.protobuf.Timestamp partition_time = 12;
}
